fix font sizes, aligns, update README.

--- a/app.css
+++ b/app.css
@@ -122,6 +122,7 @@ h1 {
   }
 
   input {
+    text-align: center;
     margin-bottom: 1rem;
     width: 20rem;
     padding: 1.5rem;
